deployment-folder/aws/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-delivery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  rules:
  - host: food-delivery.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-service
            port:
              number: 80
      - path: /restaurant
        pathType: Prefix
        backend:
          service:
            name: restaurant-service
            port:
              number: 9091
      - path: /foodCatalogue
        pathType: Prefix
        backend:
          service:
            name: foodcatalogue-service
            port:
              number: 9092
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 9094
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9093
  - host: eureka.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eureka-service
            port:
              number: 8761
  - host: grafana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
